--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "axios": "^0.21.1",
     "classnames": "2.3.1",
     "moment": "2.29.1",
     "next": "11.0.1",
